[gd_scene load_steps=3 format=3 uid="uid://cs3h2jmbb6qk7"]

[ext_resource type="Script" path="res://objects/cell.gd" id="1_63653"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ubd2d"]
size = Vector2(58, 58)

[node name="Area2D" type="Area2D"]
collision_mask = 0
priority = 1
script = ExtResource("1_63653")
empty_color = Color(0.756863, 0.584314, 0.717647, 1)
hover_color = Color(0.807843, 0.505882, 0.396078, 1)
select_color = Color(0.207843, 0.533333, 0.360784, 1)

[node name="BackColor" type="ColorRect" parent="."]
offset_right = 60.0
offset_bottom = 60.0
mouse_filter = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(30, 30)
shape = SubResource("RectangleShape2D_ubd2d")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
